# video-maestro

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  eslint.config.js  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: linux.yml  release.yml
crates/ffmpeg-audio/: Cargo.toml
crates/ffmpeg-audio/src/: lib.rs
crates/tube-rs/: Cargo.toml
crates/tube-rs/src/: lib.rs
src/: App.tsx  data.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  gemini.rs  lib.rs  main.rs  setting.rs  utils.rs  webvtt.rs  whisper.rs
src/components/: CaptionCheckBox.tsx  LanguageSelector.tsx  Message.tsx  SettingsModal.tsx  StreamText.tsx  VideoItems.tsx
src/hooks/: ToastProvider.tsx
src/store/: DataContext.tsx  SettingsProvider.tsx  index.tsx
src/types/: db.ts  settings.ts
src/utils/: files.ts
