[workspace]
resolver = "2"
members = [ "crates/tube-rs","src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = {version = "1.11"}
dotenv = "0.15"

