[package]
name = "tube-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true


[dev-dependencies]
dotenv.workspace = true
tokio.workspace = true

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true        # Enables link to optimizations
opt-level = "s"   # Optimize for binary size
debug = true
